Web.config update

--- a/ecci.inv.system/Web.config
+++ b/ecci.inv.system/Web.config
@@ -142,7 +142,7 @@
       </customBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:2908/qualitycontrol/WebService/OrderDeliveryService.asmx"
+      <!--<endpoint address="http://localhost:2908/qualitycontrol/WebService/OrderDeliveryService.asmx"
         binding="basicHttpBinding" bindingConfiguration="OrderDeliveryServiceSoap"
         contract="DeliveryService.OrderDeliveryServiceSoap" name="OrderDeliveryServiceSoap" />
       <endpoint address="http://localhost:2908/qualitycontrol/WebService/OrderDeliveryService.asmx"
@@ -201,73 +201,69 @@
         contract="ManageItemService.ManageItemServiceSoap" name="ManageItemServiceSoap" />
       <endpoint address="http://localhost:2908/admin/WebService/ManageItemService.asmx"
         binding="customBinding" bindingConfiguration="ManageItemServiceSoap12"
+        contract="ManageItemService.ManageItemServiceSoap" name="ManageItemServiceSoap12" />-->
+    </client>
+    <client>
+      <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/OrderDeliveryService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="OrderDeliveryServiceSoap"
+        contract="DeliveryService.OrderDeliveryServiceSoap" name="OrderDeliveryServiceSoap" />
+      <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/OrderDeliveryService.asmx"
+        binding="customBinding" bindingConfiguration="OrderDeliveryServiceSoap12"
+        contract="DeliveryService.OrderDeliveryServiceSoap" name="OrderDeliveryServiceSoap12" />
+      <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/DispatchingDeliveryService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="DispatchingDeliveryServiceSoap"
+        contract="DispatchService.DispatchingDeliveryServiceSoap" name="DispatchingDeliveryServiceSoap" />
+      <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/DispatchingDeliveryService.asmx"
+        binding="customBinding" bindingConfiguration="DispatchingDeliveryServiceSoap12"
+        contract="DispatchService.DispatchingDeliveryServiceSoap" name="DispatchingDeliveryServiceSoap12" />
+      <endpoint address="http://triton.pemaustria.comhttp://localhost:2908/production/WebService/ProdRaw.asmx"
+        binding="basicHttpBinding" bindingConfiguration="ProdRawSoap"
+        contract="ProductRawService.ProdRawSoap" name="ProdRawSoap" />
+      <endpoint address="http://triton.pemaustria.com/production/WebService/ProdRaw.asmx"
+        binding="customBinding" bindingConfiguration="ProdRawSoap12"
+        contract="ProductRawService.ProdRawSoap" name="ProdRawSoap12" />
+      <endpoint address="http://triton.pemaustria.com/admin/WebService/AdminRaw.asmx"
+        binding="basicHttpBinding" bindingConfiguration="AdminRawSoap"
+        contract="AdminRawService.AdminRawSoap" name="AdminRawSoap" />
+      <endpoint address="http://triton.pemaustria.com/admin/WebService/AdminRaw.asmx"
+        binding="customBinding" bindingConfiguration="AdminRawSoap12"
+        contract="AdminRawService.AdminRawSoap" name="AdminRawSoap12" />
+      <endpoint address="http://triton.pemaustria.com/warehouse/WebService/WarehouseRaw.asmx"
+        binding="basicHttpBinding" bindingConfiguration="WarehouseRawSoap"
+        contract="WarehouseRaw.WarehouseRawSoap" name="WarehouseRawSoap" />
+      <endpoint address="http://triton.pemaustria.com/warehouse/WebService/WarehouseRaw.asmx"
+        binding="customBinding" bindingConfiguration="WarehouseRawSoap12"
+        contract="WarehouseRaw.WarehouseRawSoap" name="WarehouseRawSoap12" />
+      <endpoint address="http://triton.pemaustria.com/sales/WebService/ProductOrderService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="ProductOrderServiceSoap"
+        contract="ProductOrderService.ProductOrderServiceSoap" name="ProductOrderServiceSoap" />
+      <endpoint address="http://triton.pemaustria.com/sales/WebService/ProductOrderService.asmx"
+        binding="customBinding" bindingConfiguration="ProductOrderServiceSoap12"
+        contract="ProductOrderService.ProductOrderServiceSoap" name="ProductOrderServiceSoap12" />
+      <endpoint address="http://triton.pemaustria.com/admin/WebService/ManageClientService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="ManageClientServiceSoap"
+        contract="ManageClientService.ManageClientServiceSoap" name="ManageClientServiceSoap" />
+      <endpoint address="http://triton.pemaustria.com/admin/WebService/ManageClientService.asmx"
+        binding="customBinding" bindingConfiguration="ManageClientServiceSoap12"
+        contract="ManageClientService.ManageClientServiceSoap" name="ManageClientServiceSoap12" />
+      <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/OnHoldService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="OnHoldServiceSoap"
+        contract="OnHoldService.OnHoldServiceSoap" name="OnHoldServiceSoap" />
+      <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/OnHoldService.asmx"
+        binding="customBinding" bindingConfiguration="OnHoldServiceSoap12"
+        contract="OnHoldService.OnHoldServiceSoap" name="OnHoldServiceSoap12" />
+      <endpoint address="http://triton.pemaustria.com/admin/WebService/ManageSupplierService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="ManageSupplierServiceSoap"
+        contract="ManageSupplierService.ManageSupplierServiceSoap" name="ManageSupplierServiceSoap" />
+      <endpoint address="http://triton.pemaustria.com/admin/WebService/ManageSupplierService.asmx"
+        binding="customBinding" bindingConfiguration="ManageSupplierServiceSoap12"
+        contract="ManageSupplierService.ManageSupplierServiceSoap" name="ManageSupplierServiceSoap12" />
+      <endpoint address="http://triton.pemaustria.com/admin/WebService/ManageItemService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="ManageItemServiceSoap"
+        contract="ManageItemService.ManageItemServiceSoap" name="ManageItemServiceSoap" />
+      <endpoint address="http://triton.pemaustria.com/admin/WebService/ManageItemService.asmx"
+        binding="customBinding" bindingConfiguration="ManageItemServiceSoap12"
         contract="ManageItemService.ManageItemServiceSoap" name="ManageItemServiceSoap12" />
     </client>
-    <!--<client>
-      <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/OrderDeliveryService.asmx"
-           binding="basicHttpBinding" bindingConfiguration="OrderDeliveryServiceSoap"
-           contract="DeliveryService.OrderDeliveryServiceSoap" name="OrderDeliveryServiceSoap" />
-      <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/OrderDeliveryService.asmx"
-           binding="customBinding" bindingConfiguration="OrderDeliveryServiceSoap12"
-           contract="DeliveryService.OrderDeliveryServiceSoap" name="OrderDeliveryServiceSoap12" />
-      <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/DispatchingDeliveryService.asmx"
-           binding="basicHttpBinding" bindingConfiguration="DispatchingDeliveryServiceSoap"
-           contract="DispatchService.DispatchingDeliveryServiceSoap"
-           name="DispatchingDeliveryServiceSoap" />
-      <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/DispatchingDeliveryService.asmx"
-           binding="customBinding" bindingConfiguration="DispatchingDeliveryServiceSoap12"
-           contract="DispatchService.DispatchingDeliveryServiceSoap"
-           name="DispatchingDeliveryServiceSoap12" />
-      <endpoint address="http://triton.pemaustria.com/production/WebService/ProdRaw.asmx"
-           binding="basicHttpBinding" bindingConfiguration="ProdRawSoap"
-           contract="ProductRawService.ProdRawSoap" name="ProdRawSoap" />
-      <endpoint address="http://triton.pemaustria.com/production/WebService/ProdRaw.asmx"
-           binding="customBinding" bindingConfiguration="ProdRawSoap12"
-           contract="ProductRawService.ProdRawSoap" name="ProdRawSoap12" />
-      <endpoint address="http://triton.pemaustria.com/superadmin/WebService/AdminRaw.asmx"
-           binding="basicHttpBinding" bindingConfiguration="AdminRawSoap"
-           contract="AdminRawService.AdminRawSoap" name="AdminRawSoap" />
-      <endpoint address="http://triton.pemaustria.com/superadmin/WebService/AdminRaw.asmx"
-           binding="customBinding" bindingConfiguration="AdminRawSoap12"
-           contract="AdminRawService.AdminRawSoap" name="AdminRawSoap12" />
-      <endpoint address="http://triton.pemaustria.com/warehouse/WebService/WarehouseRaw.asmx"
-           binding="basicHttpBinding" bindingConfiguration="WarehouseRawSoap"
-           contract="WarehouseRaw.WarehouseRawSoap" name="WarehouseRawSoap" />
-      <endpoint address="http://triton.pemaustria.com/warehouse/WebService/WarehouseRaw.asmx"
-           binding="customBinding" bindingConfiguration="WarehouseRawSoap12"
-           contract="WarehouseRaw.WarehouseRawSoap" name="WarehouseRawSoap12" />
-      <endpoint address="http://triton.pemaustria.com/admin/WebService/ManageItemService.asmx"
-           binding="basicHttpBinding" bindingConfiguration="ManageItemServiceSoap"
-           contract="ManageItemService.ManageItemServiceSoap" name="ManageItemServiceSoap" />
-      <endpoint address="http://triton.pemaustria.com/admin/WebService/ManageItemService.asmx"
-           binding="customBinding" bindingConfiguration="ManageItemServiceSoap12"
-           contract="ManageItemService.ManageItemServiceSoap" name="ManageItemServiceSoap12" />
-      <endpoint address="http://triton.pemaustria.com/admin/WebService/ManageSupplierService.asmx"
-           binding="basicHttpBinding" bindingConfiguration="ManageSupplierServiceSoap"
-           contract="ManageSupplierService.ManageSupplierServiceSoap"
-           name="ManageSupplierServiceSoap" />
-      <endpoint address="http://triton.pemaustria.com/admin/WebService/ManageSupplierService.asmx"
-           binding="customBinding" bindingConfiguration="ManageSupplierServiceSoap12"
-           contract="ManageSupplierService.ManageSupplierServiceSoap"
-           name="ManageSupplierServiceSoap12" />
-      <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/OnHoldService.asmx"
-           binding="basicHttpBinding" bindingConfiguration="OnHoldServiceSoap"
-           contract="OnHoldService.OnHoldServiceSoap" name="OnHoldServiceSoap" />
-      <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/OnHoldService.asmx"
-           binding="customBinding" bindingConfiguration="OnHoldServiceSoap12"
-           contract="OnHoldService.OnHoldServiceSoap" name="OnHoldServiceSoap12" />
-      <endpoint address="http://triton.pemaustria.com/sales/WebService/ProductOrderService.asmx"
-           binding="basicHttpBinding" bindingConfiguration="ProductOrderServiceSoap"
-           contract="ProductOrderService.ProductOrderServiceSoap" name="ProductOrderServiceSoap" />
-      <endpoint address="http://triton.pemaustria.com/sales/WebService/ProductOrderService.asmx"
-           binding="customBinding" bindingConfiguration="ProductOrderServiceSoap12"
-           contract="ProductOrderService.ProductOrderServiceSoap" name="ProductOrderServiceSoap12" />
-      <endpoint address="http://triton.pemaustria.com/admin/WebService/ManageClientService.asmx"
-           binding="basicHttpBinding" bindingConfiguration="ManageClientServiceSoap"
-           contract="ManageClientService.ManageClientServiceSoap" name="ManageClientServiceSoap" />
-      <endpoint address="http://triton.pemaustria.com/admin/WebService/ManageClientService.asmx"
-           binding="customBinding" bindingConfiguration="ManageClientServiceSoap12"
-           contract="ManageClientService.ManageClientServiceSoap" name="ManageClientServiceSoap12" />
-    </client>-->
   </system.serviceModel>
 </configuration>
