--- a/ecci.inv.system/Web.config
+++ b/ecci.inv.system/Web.config
@@ -9,9 +9,9 @@
     <add key="CrystalImageCleaner-Sleep" value="60000" />
     <add key="CrystalImageCleaner-Age" value="120000" />
   </appSettings>
-  <connectionStrings>
+  <!--<connectionStrings>
     <add name="getdatabase" connectionString="Data Source=triton.pemaustria.com;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  </connectionStrings>-->
 
   <!--<connectionStrings>
     <add name="getdatabase"  connectionString="Data Source=triton.pemaustria.com;Initial Catalog=stock_prod;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;"
@@ -21,10 +21,10 @@
     <add name ="getdatabase" connectionString ="Data Source=triton.pemaustria.com;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;"
          providerName="System.Data.SqlClient" />
   </connectionStrings>-->
-  <!--<connectionStrings>
+  <connectionStrings>
     <add name="getdatabase" connectionString="Data Source=JOHNREY-PC\SQLEXPRESS;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=joanamahal029;"
     providerName="System.Data.SqlClient"/>
-  </connectionStrings>-->
+  </connectionStrings>
   <system.web>
     <webServices>
       <protocols>
@@ -142,7 +142,7 @@
       </customBinding>
     </bindings>
     <client>
-      <!--<endpoint address="http://localhost:2908/qualitycontrol/WebService/OrderDeliveryService.asmx"
+     <endpoint address="http://localhost:2908/qualitycontrol/WebService/OrderDeliveryService.asmx"
         binding="basicHttpBinding" bindingConfiguration="OrderDeliveryServiceSoap"
         contract="DeliveryService.OrderDeliveryServiceSoap" name="OrderDeliveryServiceSoap" />
       <endpoint address="http://localhost:2908/qualitycontrol/WebService/OrderDeliveryService.asmx"
@@ -201,9 +201,9 @@
         contract="ManageItemService.ManageItemServiceSoap" name="ManageItemServiceSoap" />
       <endpoint address="http://localhost:2908/admin/WebService/ManageItemService.asmx"
         binding="customBinding" bindingConfiguration="ManageItemServiceSoap12"
-        contract="ManageItemService.ManageItemServiceSoap" name="ManageItemServiceSoap12" />-->
+        contract="ManageItemService.ManageItemServiceSoap" name="ManageItemServiceSoap12" />
     </client>
-    <client>
+   <!-- <client>
       <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/OrderDeliveryService.asmx"
         binding="basicHttpBinding" bindingConfiguration="OrderDeliveryServiceSoap"
         contract="DeliveryService.OrderDeliveryServiceSoap" name="OrderDeliveryServiceSoap" />
@@ -264,6 +264,6 @@
       <endpoint address="http://triton.pemaustria.com/admin/WebService/ManageItemService.asmx"
         binding="customBinding" bindingConfiguration="ManageItemServiceSoap12"
         contract="ManageItemService.ManageItemServiceSoap" name="ManageItemServiceSoap12" />
-    </client>
+    </client>-->
   </system.serviceModel>
 </configuration>
